<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angelhazmato.vibragenda.vista.crud.GestionarEvento">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/gestionarEventoToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_gestion"
        app:navigationIcon="@drawable/ic_arrow_back_24px"
        app:title="Gestionar Evento" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tvGestionEveNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nombre"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/gestionarEventoToolbar" />

    <TextView
        android:id="@+id/tvGestionEveLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="Lugar"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tvGestionEveNombre" />

    <TextView
        android:id="@+id/tvGestionEveFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fecha"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tvGestionEveLugar" />

    <TextView
        android:id="@+id/tvGestionEveImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/imagen"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tvGestionEveFecha" />

    <TextView
        android:id="@+id/tvGestionEveIcono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/icono"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tvGestionEveImagen" />

    <Button
        android:id="@+id/btnGestionEveConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="Crear"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etGestionEveNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGestionEveNombre"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/gestionarEventoToolbar" />

    <Button
        android:id="@+id/btnGestionEveImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoger_imagen"
        app:layout_constraintBottom_toBottomOf="@+id/tvGestionEveImagen"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tvGestionEveImagen" />

    <Button
        android:id="@+id/btnGestionEveIco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        app:layout_constraintBottom_toBottomOf="@+id/tvGestionEveIcono"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tvGestionEveIcono" />

    <Button
        android:id="@+id/btnGestionEveFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_fecha"
        app:layout_constraintBottom_toBottomOf="@+id/tvGestionEveFecha"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tvGestionEveFecha" />

    <TextView
        android:id="@+id/tvEveFechaSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnGestionEveImg"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/btnGestionEveFecha" />

    <EditText
        android:id="@+id/etGestionEveLugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tvGestionEveFecha"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/etGestionEveNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>